invalid_tests/statements/test3.go
// Test 3: Missing closing brace
func main() {
    for i := 0; i < 10; i++ {
        x := 10
}
